@@ -1,3 +1,9 @@
+Sun Aug 07 21:57:05 GMT 2011  Olly Betts <olly@survex.com>
+
+	* Backport change from trunk:
+	* lua/smoketest.lua: Add simple test for
+	  Database::positionlist_begin().
+
 Sun Aug 07 10:25:41 GMT 2011  Olly Betts <olly@survex.com>
 
 	* Backport change from trunk:
